   to recompile the bootloader on this platform (see the manual).
 * Fix spurious KeyError when using dbhash
 * Fix import of nested packages made from Pyrex-generated files.
 * PyInstaller is now able to follow dependencies of binary extensions
   (.pyd/.so) compressed within .egg-files.
 + Add import hook for PyTables.
 + Add missing import hook for QtWebKit.
 * Improve matplotlib import hook (for Mac OSX).
 * Improve Django import hooks.
 * Rewritten the build system for the bootloader using waf (thanks
   to Martin Zibricky)
 * Improve compatibility across multiple Linux distributions by
   being more careful on which libraries are included/excluded in
   the package.
 * Improve compatibility with old Python versions.
 * Fix double-bouncing-icon bug on Mac OSX. Now windowed applications
   correctly start on Mac OSX showing a single bouncing icon.

Changes since PyInstaller 1.3
-----------------------------
 + Fully support up to Python 2.6 on Linux/Mac and Python 2.5
   on Windows.
 + Preliminar Mac OSX support: both one-file and one-dir is supported;
   for non-console applications, a bundle can be created. Thanks
   to many people that worked on this across several months (Daniele
   Zannotti, Matteo Bertini, Lorenzo Mancini).
 + Improved Linux support: generated executables are fatter but now
   should now run on many different Linux distributions (thanks to David
   Mugnai).
 * Add support for specifying data files in import hooks. PyInstaller
   can now automatically bundle all data files or plugins required
   for a certain 3rd-party package.
 + Add intelligent support for ctypes: PyInstaller is now able to
   track all places in the source code where ctypes is used and
   automatically bundle dynamic libraries accessed through ctypes.
   (Thanks to Lorenzo Mancini for submitting this). This is very
   useful when using ctypes with custom-made dynamic libraries.
 + Executables built with PyInstaller under Windows can now be digitally
   signed.